
-Added a config option to customize the brightness of walls when they are highlighted by the biome sight potion.
-Added mod compat with 'Terraria Origins' and 'AltLibrary'
-Added an experimental config option to bring back demon altars spawning in infected blocks, has mod compability
-Added infected variants of moss and gemstone blocks and a config option to disable them respectively
-Added a config header for client
-Added a background color for client-side config
-Added Russian translation. Credit goes to alinahvoshch
-Added custom textures for infected snow trees.
-Added pureglow compability for 'SpiritMod'
-Added journey mode research values for some items
-Added ecto and illuminant coating support for biome sight wall highlighting

-Infected cave walls now get highlighted by biome sight potions and spread infections. However they won't convert other cave walls
-Chlorophyte can block infections pre-plantera again if 'InfectedBiomes' are disabled
-Hallow theme now plays in the Hallowed jungle, can be disabled in the config
-Jungle spores now grow in infected jungles
-Changed the server config to only accept changes from the server host
-Infected grasses(both normal and jungle) no longer spread to grass pre-hardmode, and no longer spread over each other.
-Infected plantera bulbs' dusts changed to be less bloated.

-Fixed description typo, and added missing features to the description. Also removed comment about Radiance mod compat, since it had no point in existing
-Fixed vertebrae --> leather recipe not needing workbench. Also fixed duplicate recipe when used with Thorium mod
-Fixed infected planteras crashing the game upon mod unload
-Fixed infection spreading potentially crashing the game if infected biomes aren't enabled
-Fixed corrupt jungle grass emmiting particles even when coated with echo paint.
-Fixed hallowed thorns not having proper dust values

0.7.1
=====
-Initial Release